Upgraded to ER3

--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -10,7 +10,7 @@ ENV JBOSS_HOME $HOME/jboss-eap-7.1
 ENV BA_VERSION_MAJOR 7
 ENV BA_VERSION_MINOR 0
 ENV BA_VERSION_MICRO 0
-ENV BA_VERSION_PATCH ER2
+ENV BA_VERSION_PATCH ER3
 
 ENV EAP_VERSION_MAJOR 7
 ENV EAP_VERSION_MINOR 1
@@ -18,8 +18,8 @@ ENV EAP_VERSION_MICRO 0
 #ENV EAP_VERSION_PATCH 0
 
 ENV EAP_ARCHIVE=jboss-eap-$EAP_VERSION_MAJOR.$EAP_VERSION_MINOR.$EAP_VERSION_MICRO.zip
-ENV BA_BUSINESS_CENTRAL=rhba-$BA_VERSION_MAJOR.$BA_VERSION_MINOR.$BA_VERSION_MICRO.$BA_VERSION_PATCH-business-central-eap7-deployable.zip
-ENV BA_KIE_SERVER=rhba-$BA_VERSION_MAJOR.$BA_VERSION_MINOR.$BA_VERSION_MICRO.$BA_VERSION_PATCH-kie-server-ee7.zip
+ENV BA_BUSINESS_CENTRAL=rhpam-$BA_VERSION_MAJOR.$BA_VERSION_MINOR.$BA_VERSION_MICRO.$BA_VERSION_PATCH-business-central-eap7-deployable.zip
+ENV BA_KIE_SERVER=rhpam-$BA_VERSION_MAJOR.$BA_VERSION_MINOR.$BA_VERSION_MICRO.$BA_VERSION_PATCH-kie-server-ee7.zip
 
 # ADD Installation Files
 COPY installs/$BA_BUSINESS_CENTRAL installs/$BA_KIE_SERVER installs/$EAP_ARCHIVE /opt/jboss/
