Upgraded to version ER5.

--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -7,10 +7,10 @@ MAINTAINER Red Hat
 # Environment Variables
 ENV HOME /opt/jboss
 ENV JBOSS_HOME $HOME/jboss-eap-7.1
-ENV BA_VERSION_MAJOR 7
-ENV BA_VERSION_MINOR 0
-ENV BA_VERSION_MICRO 0
-ENV BA_VERSION_PATCH ER4
+ENV PAM_VERSION_MAJOR 7
+ENV PAM_VERSION_MINOR 0
+ENV PAM_VERSION_MICRO 0
+ENV PAM_VERSION_PATCH ER5
 
 ENV EAP_VERSION_MAJOR 7
 ENV EAP_VERSION_MINOR 1
@@ -18,10 +18,10 @@ ENV EAP_VERSION_MICRO 0
 #ENV EAP_VERSION_PATCH 0
 
 ENV EAP_ARCHIVE=jboss-eap-$EAP_VERSION_MAJOR.$EAP_VERSION_MINOR.$EAP_VERSION_MICRO.zip
-ENV PAM_BUSINESS_CENTRAL=rhpam-$BA_VERSION_MAJOR.$BA_VERSION_MINOR.$BA_VERSION_MICRO.$BA_VERSION_PATCH-business-central-eap7-deployable.zip
-ENV PAM_KIE_SERVER=rhpam-$BA_VERSION_MAJOR.$BA_VERSION_MINOR.$BA_VERSION_MICRO.$BA_VERSION_PATCH-kie-server-ee7.zip
-ENV PAM_ADDONS=rhpam-7.0.0.ER4-add-ons.zip
-ENV PAM_CASE_MGMT=rhpam-7.0-case-mgmt-showcase-eap7-deployable.zip
+ENV PAM_BUSINESS_CENTRAL=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR.$PAM_VERSION_MICRO.$PAM_VERSION_PATCH-business-central-eap7-deployable.zip
+ENV PAM_KIE_SERVER=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR.$PAM_VERSION_MICRO.$PAM_VERSION_PATCH-kie-server-ee7.zip
+ENV PAM_ADDONS=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR.$PAM_VERSION_MICRO.$PAM_VERSION_PATCH-add-ons.zip
+ENV PAM_CASE_MGMT=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR-case-mgmt-showcase-eap7-deployable.zip
 
 # ADD Installation Files
 COPY installs/$PAM_BUSINESS_CENTRAL installs/$PAM_KIE_SERVER installs/$PAM_ADDONS installs/$EAP_ARCHIVE /opt/jboss/
