Fixed init scripts because of name change in artifacts.

--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -10,19 +10,20 @@ ENV JBOSS_HOME $HOME/jboss-eap-7.1
 ENV PAM_VERSION_MAJOR 7
 ENV PAM_VERSION_MINOR 0
 ENV PAM_VERSION_MICRO 0
-ENV PAM_VERSION_PATCH GA
+#ENV PAM_VERSION_PATCH 
+ENV PAM_VERSION $PAM_VERSION_MAJOR.$PAM_VERSION_MINOR.$PAM_VERSION_MICRO
 
 ENV EAP_VERSION_MAJOR 7
 ENV EAP_VERSION_MINOR 1
 ENV EAP_VERSION_MICRO 0
 #ENV EAP_VERSION_PATCH 0
+ENV EAP_VERSION $EAP_VERSION_MAJOR.$EAP_VERSION_MINOR.$EAP_VERSION_MICRO
 
-ENV EAP_ARCHIVE=jboss-eap-$EAP_VERSION_MAJOR.$EAP_VERSION_MINOR.$EAP_VERSION_MICRO.zip
-ENV PAM_BUSINESS_CENTRAL=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR.$PAM_VERSION_MICRO.$PAM_VERSION_PATCH-business-central-eap7-deployable.zip
-ENV PAM_KIE_SERVER=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR.$PAM_VERSION_MICRO.$PAM_VERSION_PATCH-kie-server-ee7.zip
-ENV PAM_ADDONS=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR.$PAM_VERSION_MICRO.$PAM_VERSION_PATCH-add-ons.zip
+ENV EAP_ARCHIVE=jboss-eap-$EAP_VERSION.zip
+ENV PAM_BUSINESS_CENTRAL=rhpam-$PAM_VERSION-business-central-eap7-deployable.zip
+ENV PAM_KIE_SERVER=rhpam-$PAM_VERSION-kie-server-ee7.zip
+ENV PAM_ADDONS=rhpam-$PAM_VERSION-add-ons.zip
 ENV PAM_CASE_MGMT=rhpam-$PAM_VERSION_MAJOR.$PAM_VERSION_MINOR-case-mgmt-showcase-eap7-deployable.zip
-
 # ADD Installation Files
 COPY installs/$PAM_BUSINESS_CENTRAL installs/$PAM_KIE_SERVER installs/$PAM_ADDONS installs/$EAP_ARCHIVE /opt/jboss/
 
